<resources>
    <string name="app_name">Mantenimiendo-de-naves</string>

    <string name="txtmantenimiento">CONTROL Y MANTENIMIENTO DE NAVES</string>
    <string name="txtUsuario">Correo</string>
    <string name="txtContraseña">Contraseña</string>
    <string name="btniniciar_sesion">INICIAR SESIÓN</string>
    <string name="btnRegistro">REGISTRARSE</string>
    <string name="txtrestaurar">RESTAURAR CONTRASEÑA</string>


    <string name="txtRegistro">REGISTRO</string>
    <string name="txtNombres">Nombres</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="txtCorreo">Correo</string>
    <string name="txtConfirmacion">Confirmar correo</string>
    <string name="txtContraseñaR">Contraseña</string>
    <string name="txtContraseñaconf">Confirmar contraseña</string>
    <string name="txtdocumento">Número de documento</string>
    <string name="txtTelefono">Telefono</string>
    <string name="txtCodigo">Codigo de Ingreso</string>
    <string name="btnregistrarse">Registrarse</string>x
    <string-array name="tipodocumento">
        <item>Tipo de documento</item>
        <item>Cédula de ciudadanía</item>
        <item>Cédula de extranjeria</item>
    </string-array>

</resources>